samples/_failures_safe/1761690011_1ce640_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb2afb49.c: In function ‘tokenize’:
./samples/SAFE/__tmp_bb2afb49.c:161:27: error: expected ‘]’ at end of input
  161 |         tokens[token_count
      |                           ^
      |                           ]
./samples/SAFE/__tmp_bb2afb49.c:161:9: error: expected declaration or statement at end of input
  161 |         tokens[token_count
      |         ^~~~~~
./samples/SAFE/__tmp_bb2afb49.c:161:9: error: expected declaration or statement at end of input
